a tidy up of pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %} 
 
 <style>
-/* Adding my image to backround */
+/* image to backround */
     html { 
         background: url(connemara.jpg) no-repeat center fixed; 
         background-size: cover;
