--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -4,6 +4,8 @@
     <title>Recipient Table</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+
+/* various styles, some form w3schools, referenced in read me */
 <style>
 
 /* Style the top navigation bar */
@@ -250,7 +252,7 @@ a:hover {
 
 		<div class="topnav">
              <!-- Reference to all the pages -->
-	    <a href="index.html">Home</a>
+	    <a href="/index">Home</a>
         <a href="/database">SQL Vaccine Database</a>
 		<a href="/weather">Get weather through third party API</a>
 		<a href="/aimsir.html">Weather Chart</a>
