more tidying up

--- a/templates/recipient.html
+++ b/templates/recipient.html
@@ -302,7 +302,7 @@ a:hover {
     <div id="display">
 
         <button id="showCreate-button" onClick="showCreate()">Add recipient</button>
-        <input type="button" id="vetsDB-button" onclick="location.href='/vaccinatordata';" value="Vaccinator table" />
+        <input type="button" id="vaccinatorsDB-button" onclick="location.href='/vaccinatordata';" value="Vaccinator table" />
         <br/><br/>
         <table id="recipientTable" class="table">
             <tr>
